--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <style name="Theme.Vinilos" parent="android:Theme.Material.Light.NoActionBar" />
+  <style name="Theme.Vinilos" parent="android:Theme.Material.Light.NoActionBar" >
+    <item name="android:windowFullscreen">true</item>
+  </style>
+
+
+  <style name="Theme.Splash" parent="android:Theme.Material.Light.NoActionBar">
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+    <item name="windowSplashScreenBackground">@color/black</item>
+    <item name="windowSplashScreenAnimatedIcon">@null</item>
+    <item name="windowSplashScreenAnimationDuration">0</item>
+    <item name="postSplashScreenTheme">@style/Theme.Vinilos</item>
+    <item name="android:windowIsTranslucent">true</item>
+  </style>
 </resources>
